# nexus-dex

./: .env.example  .gitignore  README.md  WalletContext.js  admin.js  alpha-watcher.js  ape-helpers.js  ape-pump-candles.js  ape-pump-trade.js  build-wc.mjs  build.sh  config-overrides.embed.js  config-overrides.js  fetch_jupiter_tokens.mjs  flipsy-admin.html  flipsy-setup.sh  flipsy.sh  index.html  lib.rs  nexus-sitemap.xml  nixpacks.toml  package-lock.json  package.json  packagewc.json  polymarket-client.js  polymarket.js  predict-bridge.js  pumpfun-trade.js  railway.json  referrals.js  robots.txt  seo-pages.js  seo-project.js  server-poly-relayer.js  server-predict.js  server.js  setupLaunchpad.js  tsconfig.json  vercel.json  verixia-wc.js  (+2 more)
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
crank/: crank.ts  flipsy-idl.json
data/: .nexus_dex_generated_slugs_backup.txt  nexus_dex_clusters.py  nexus_dex_generated_keywords.txt  nexus_dex_generated_slugs.txt  nexus_dex_keywords.txt  nexus_dex_patterns.txt  nexus_dex_rejected_keywords.txt  nexus_dex_seed_keywords.txt
defi/: _hub_build_report.json  index.html
embed/: config.js
flipsy/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
flipsy/programs/flipsy/: Cargo.toml
flipsy/programs/flipsy/src/: lib.rs
flipsy/programs/flipsy/tests/: init.ts
public/: _hub_build_report.json  index.html  manifest.json  nexus-sitemap.xml  robots.txt
scripts/: build-wc.mjs  build_nexus_dex_hubs.py  build_nexus_dex_hubs_basic.py  build_nexus_dex_seo.py  build_nexus_dex_seo_incremental.py  expand_nexus_dex_keywords.py  (+4 more)
(+4135 files in other folders)
